--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,6 +27,10 @@
         <async-supported>true</async-supported>
     </servlet>
     <servlet>
+        <servlet-name>Addon</servlet-name>
+        <servlet-class>com.vaadin.tests.addons.AddonTestServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>Embed App 2</servlet-name>
         <servlet-class>com.vaadin.server.VaadinServlet</servlet-class>
         <init-param>
@@ -134,6 +138,11 @@
     <servlet-mapping>
         <servlet-name>VaadinApplicationRunnerWithPush</servlet-name>
         <url-pattern>/run-push/*</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>Addon</servlet-name>
+        <url-pattern>/addon/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
